Initial product-detail

--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
 	],
 	"globalJs": [
 		"bower_components/jquery/dist/jquery.min.js",
+		"bower_components/fancybox/dist/jquery.fancybox.min.js",
 		"bower_components/swiper/dist/js/swiper.min.js",
 		"src/plugins/lazysizes.min.js",
 		"src/plugins/mapping.js",
@@ -15,6 +16,7 @@
 	"globalCss": [
 		"src/plugins/grid.css",
 		"src/plugins/font.css",
+		"bower_components/fancybox/dist/jquery.fancybox.min.css",
 		"bower_components/swiper/dist/css/swiper.min.css"
 	]
 }
